--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,35 @@
 /* You can add global styles to this file, and also import other style files */
+@use "@angular/material" as mat;
+@use "./styles/themes/all" as themes;
+@use "./styles/typography/config";
+@use "./styles/components";
+@use "./styles/themes/custom-theme";
+@use "./styles/sizes";
+
+@include mat.core();
+
+@include mat.typography-hierarchy(config.$my-app-typography);
+@include mat.core-theme(themes.$my-app-light-theme);
+@include mat.button-theme(themes.$my-app-light-theme);
+@include mat.icon-theme(themes.$my-app-light-theme);
+@include mat.menu-theme(themes.$my-app-light-theme);
+
+// @include components.theme(themes.$my-app-light-theme);
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: "Inter", sans-serif;
+}
+
+.button-rounded {
+  &.mat-mdc-button,
+  &.mat-mdc-raised-button,
+  &.mdc-button--unelevated,
+  &.mdc-button--outlined {
+    border-radius: 25% / 50%;
+  }
+}
