--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,38 @@
 <!-- src/app/app.component.html -->
-<ul> <li *ngFor="let city of cities"> {{ city.ID }} - {{ city.CountryCode }} - {{ city.District }} - {{ city.Population }} </li> </ul>
+<!-- <ul> <li *ngFor="let city of cities"> {{ city.ID }} - {{ city.CountryCode }} - {{ city.District }} - {{ city.Population }} </li> </ul> -->
+<style>
+  body, table, th, td, .mat-cell, .mat-header-cell {
+    color: var(--text-color) !important;
+  }
+</style>
+
+<table mat-table [dataSource]="cities" class="mat-elevation-z8">
+  <ng-container matColumnDef="ID">
+    <th mat-header-cell *matHeaderCellDef> ID </th>
+    <td mat-cell *matCellDef="let element">{{element.ID}}</td>
+  </ng-container>
+  <ng-container matColumnDef="CountryCode">
+    <th mat-header-cell *matHeaderCellDef> Country code </th>
+    <td mat-cell *matCellDef="let element"> {{element.CountryCode}} </td>
+  </ng-container>
+  <ng-container matColumnDef="District">
+    <th mat-header-cell *matHeaderCellDef> District </th>
+    <td mat-cell *matCellDef="let element"> {{element.District}} </td>
+  </ng-container>
+  <ng-container matColumnDef="Population">
+    <th mat-header-cell *matHeaderCellDef> Population </th>
+    <td mat-cell *matCellDef="let element"> {{element.Population}} </td>
+  </ng-container>
+  
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+
 <div class="container">
-  <h1>Angular Material Theming System: Complete Guide</h1>
+  <div style="background: 'primary';">
+    <h1>Angular Material Theming System: Complete Guide</h1>
+  </div>
+  
   <button
     mat-icon-button
     class="theme-toggle"
