--- a/src/styles/themes/_all.scss
+++ b/src/styles/themes/_all.scss
@@ -26,7 +26,12 @@ $my-app-dark-theme: mat.m2-define-dark-theme(
     color: (
       primary: mat.m2-define-palette(mat.$m2-pink-palette),
       accent: mat.m2-define-palette(mat.$m2-blue-grey-palette),
+      warn:  mat.m2-define-palette(mat.$m2-red-palette)
     ),
     typography: config.$my-app-typography, // Added
   )
 );
+
+.text-color {
+  color: white !important;
+}
